--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "backend-gavito",
+  "name": "Belen",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "contenedor.js",
   "scripts": {
     "start": "node index.js",
-    "startdev": "nodemon index.js"
-    
+    "start-dev": "nodemon index.js",
+    "middlewares": "nodemon middlewares.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.15"
   }
 }
